# wrs_nagai

./: .gitignore  pyproject.toml
0000_nagai/: grasp_planning_or2fg7.py  khi_ppp.py
nagai/: grasp_planning_or2fg7.py  khi_load_mot.py  khi_ppp.py  mk_fig.py  object.yaml  pos_abs.py  pos_load.py  worklist.py
wrs/: __init__.py
wrs/manipulation/: pick_place_planner.py
wrs/robot_sim/end_effectors/: ee_interface.py
wrs/robot_sim/robots/khi/: grasp_planning_or2fg7.py  khi_blqc.py  khi_main.py  khi_or2fg7.py  khi_orsd.py  khi_ppp.py
wrs/visualization/panda/: world.py
